Run command complete